# vidocq

./: .SRCINFO  .gitignore  Cargo.toml  GITHUB_SETUP.md  INSTALL_AUR.md  LICENSE  PKGBUILD  PUSH_INSTRUCTIONS.md  README.md
.github/workflows/: ci.yml
src/: checker.rs  main.rs  sites.rs
