[package]
name = "vidocq"
version = "0.1.3"
edition = "2021"
description = "Advanced OSINT tool for username searching across 100+ platforms"
authors = ["r3dg0d"]
license = "MIT"
repository = "https://github.com/r3dg0d/vidocq"
keywords = ["osint", "username", "search", "social-media", "investigation"]
categories = ["command-line-utilities", "security"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
colored = "2.0"
indicatif = "0.17"
regex = "1.10"

